re run rf with grid

--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -3011,10 +3011,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train mae 86955.77261718779\n",
-      "test mae 96054.31325490991\n",
-      "test r^2 0.9685975229552111\n",
-      "test variance 0.9685977635596624\n"
+      "train mae 86955.59220828484\n",
+      "test mae 96054.12772811594\n",
+      "test r^2 0.9685975624125258\n",
+      "test variance 0.9685978028444853\n"
      ]
     }
    ],
@@ -3071,8 +3071,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best neg mae -90316.456735071\n",
-      "best hyper params {'lin_reg__fit_intercept': 'True', 'lin_reg__positive': 'True', 'pca__n_components': 4}\n"
+      "best neg mae -90316.56950190946\n",
+      "best hyper params {'lin_reg__fit_intercept': 'False', 'lin_reg__positive': 'True', 'pca__n_components': 4}\n"
      ]
     }
    ],
@@ -3119,14 +3119,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train rmse 68495.38013224969\n",
-      "test rmse 91873.989375508\n"
+      "train mae 68495.38013224969\n",
+      "test mae 91873.989375508\n"
      ]
     }
    ],
    "source": [
-    "print('train rmse', trainMae)\n",
-    "print('test rmse', testMae)"
+    "print('train mae', trainMae)\n",
+    "print('test mae', testMae)"
    ]
   },
   {
@@ -3139,13 +3139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "id": "dadcded7-c3b8-4f14-b274-3825143502aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_depth=[8]\n",
-    "n_estimators = [50,100,150]\n",
+    "max_depth=[10]\n",
+    "n_estimators = [50,75, 100,125, 150,200]\n",
     "n_jobs = [-1]\n",
     "param_grid = dict(\n",
     "    max_depth=max_depth,\n",
@@ -3166,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "id": "9b71c257-a448-46e4-b2e2-e2986d3efb4f",
    "metadata": {},
    "outputs": [
@@ -3174,8 +3174,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -102078.31869179782\n",
-      "best hyperparameters {'max_depth': 8, 'n_estimators': 100, 'n_jobs': -1}\n"
+      "best negative mae -102066.13128689004\n",
+      "best hyperparameters {'max_depth': 10, 'n_estimators': 200, 'n_jobs': -1}\n"
      ]
     }
    ],
@@ -3279,7 +3279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -418626.02249210526\n",
+      "best negative mae -406754.90988141636\n",
       "best hyperparameters {'max_features': 3, 'n_estimators': 10}\n"
      ]
     }
