--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -2915,6 +2915,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8773849a-1681-43bf-9ead-9b4f62ad69ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:        Total Sales ($)   R-squared:                       0.978\n",
+      "Model:                            OLS   Adj. R-squared:                  0.978\n",
+      "Method:                 Least Squares   F-statistic:                 5.729e+04\n",
+      "Date:                Sun, 05 Dec 2021   Prob (F-statistic):               0.00\n",
+      "Time:                        10:46:37   Log-Likelihood:            -2.8540e+05\n",
+      "No. Observations:               20549   AIC:                         5.708e+05\n",
+      "Df Residuals:                   20532   BIC:                         5.710e+05\n",
+      "Df Model:                          16                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "x1         -2.677e+04   1910.811    -14.008      0.000   -3.05e+04    -2.3e+04\n",
+      "x2          1.591e+06   1.23e+04    129.289      0.000    1.57e+06    1.62e+06\n",
+      "x3          1.496e+05   1.23e+04     12.148      0.000    1.26e+05    1.74e+05\n",
+      "x4          3210.9605   2042.907      1.572      0.116    -793.300    7215.220\n",
+      "x5          3779.1611   2035.132      1.857      0.063    -209.859    7768.181\n",
+      "x6          4.785e+05   6475.478     73.899      0.000    4.66e+05    4.91e+05\n",
+      "x7          4.674e+05   6387.615     73.179      0.000    4.55e+05     4.8e+05\n",
+      "x8          5.512e+05   6339.055     86.957      0.000    5.39e+05    5.64e+05\n",
+      "x9          4.849e+05   6301.777     76.943      0.000    4.73e+05    4.97e+05\n",
+      "x10         5.119e+05   6190.895     82.681      0.000       5e+05    5.24e+05\n",
+      "x11         4.799e+05   6147.577     78.065      0.000    4.68e+05    4.92e+05\n",
+      "x12         5.224e+05   6158.565     84.820      0.000     5.1e+05    5.34e+05\n",
+      "x13         4.936e+05   6124.489     80.602      0.000    4.82e+05    5.06e+05\n",
+      "x14         4.641e+05   5705.697     81.336      0.000    4.53e+05    4.75e+05\n",
+      "x15         4.678e+05   6789.384     68.896      0.000    4.54e+05    4.81e+05\n",
+      "x16         4.704e+05   6625.322     71.006      0.000    4.57e+05    4.83e+05\n",
+      "x17         5.067e+05   6538.853     77.486      0.000    4.94e+05    5.19e+05\n",
+      "==============================================================================\n",
+      "Omnibus:                    18116.401   Durbin-Watson:                   2.004\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):        270602261.814\n",
+      "Skew:                           2.520   Prob(JB):                         0.00\n",
+      "Kurtosis:                     565.158   Cond. No.                         13.6\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "stats = sm.OLS(labels, preparedData)\n",
+    "resultStats = stats.fit()\n",
+    "print(resultStats.summary())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fe1e9c15-bb9f-4fe8-b758-fe76a3a3ef4a",
    "metadata": {},
@@ -2924,7 +2984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "c55cb64b-24bd-447c-a985-61b7bc16e36b",
    "metadata": {},
    "outputs": [],
@@ -2949,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "86a1af88-4042-4974-bf00-42fe56aa939c",
    "metadata": {},
    "outputs": [
@@ -2977,7 +3037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "id": "8e452a72-77b1-4dc6-8197-3c3a217a6b11",
    "metadata": {},
    "outputs": [],
@@ -3003,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "df38dec8-7ff9-4daa-88cd-79b0e2e78e28",
    "metadata": {},
    "outputs": [
@@ -3011,10 +3071,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train mae 86955.59220828484\n",
-      "test mae 96054.12772811594\n",
-      "test r^2 0.9685975624125258\n",
-      "test variance 0.9685978028444853\n"
+      "train mae 86956.30569385413\n",
+      "test mae 96055.03777373991\n",
+      "test r^2 0.9685975104308667\n",
+      "test variance 0.9685977508341262\n"
      ]
     }
    ],
@@ -3035,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "ad21ecc9-70a0-4615-bab3-461596e7d691",
    "metadata": {},
    "outputs": [],
@@ -3063,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "ee412e43-ea80-49db-be6d-6218af13083e",
    "metadata": {},
    "outputs": [
@@ -3071,8 +3131,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best neg mae -90316.56950190946\n",
-      "best hyper params {'lin_reg__fit_intercept': 'False', 'lin_reg__positive': 'True', 'pca__n_components': 4}\n"
+      "best neg mae -90316.55756935169\n",
+      "best hyper params {'lin_reg__fit_intercept': 'False', 'lin_reg__positive': 'False', 'pca__n_components': 4}\n"
      ]
     }
    ],
@@ -3091,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "id": "c50790e0-fcdf-4847-bc68-f46fe0877759",
    "metadata": {},
    "outputs": [],
@@ -3111,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "b45a3166-10eb-44fc-b064-f8fbf7812c6a",
    "metadata": {},
    "outputs": [
@@ -3139,7 +3199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "id": "dadcded7-c3b8-4f14-b274-3825143502aa",
    "metadata": {},
    "outputs": [],
@@ -3166,7 +3226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "id": "9b71c257-a448-46e4-b2e2-e2986d3efb4f",
    "metadata": {},
    "outputs": [
@@ -3174,7 +3234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best negative mae -102066.13128689004\n",
+      "best negative mae -102503.55839251845\n",
       "best hyperparameters {'max_depth': 10, 'n_estimators': 200, 'n_jobs': -1}\n"
      ]
     }
@@ -3194,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "108c167f-b0c4-4889-b57b-19295a578f6b",
    "metadata": {},
    "outputs": [],
@@ -3217,19 +3277,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a67517be-5c70-48f1-acec-74f3a20ee052",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best negative mae -412120.8287665685\n",
-      "best hyperparameters {'kernel': 'poly'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
@@ -3245,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "201bf56e-a5df-4ce0-bb42-04284832d897",
    "metadata": {},
    "outputs": [],
@@ -3271,31 +3322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "15db7edb-a26b-4af6-a360-73a8e077a06f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best negative mae -406754.90988141636\n",
-      "best hyperparameters {'max_features': 3, 'n_estimators': 10}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5718c54b-1ded-44f9-b38a-585df7cc9839",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
