--- a/proj3W.ipynb
+++ b/proj3W.ipynb
@@ -3254,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "108c167f-b0c4-4889-b57b-19295a578f6b",
    "metadata": {},
    "outputs": [],
@@ -3277,10 +3277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "a67517be-5c70-48f1-acec-74f3a20ee052",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae -412120.8287665685\n",
+      "best hyperparameters {'kernel': 'poly'}\n"
+     ]
+    }
+   ],
    "source": [
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
@@ -3296,7 +3305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "201bf56e-a5df-4ce0-bb42-04284832d897",
    "metadata": {},
    "outputs": [],
@@ -3322,10 +3331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "15db7edb-a26b-4af6-a360-73a8e077a06f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best negative mae -383134.07567148004\n",
+      "best hyperparameters {'max_features': 3, 'n_estimators': 20}\n"
+     ]
+    }
+   ],
    "source": [
     "print('best negative mae', gridResult.best_score_)\n",
     "print('best hyperparameters', gridResult.best_params_)"
